# CompilersProject

./: CMakeLists.txt  README.md  input_rules.txt  main.cpp
DFA/: DFA.cpp
lexicalAnalyser/: LexicalAnalyser.cpp  LexicalAnalyser.h
src/DFA/: DFA.cpp  DFA.h
src/LexicalAnalyser/: LexicalAnalyser.cpp  LexicalAnalyser.h
src/NFA/: NFA.cpp  NFA.h  NFA_builder.cpp  NFA_builder.h
src/Node/: Node.cpp  Node.h
src/Utils/: utils.cpp  utils.h
testFiles/: dfa_tests
